<?xml version="1.0" encoding="UTF-8"?>
<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>org.broadinstitute.gpp</groupId>
  <artifactId>rigerj</artifactId>
  <version>2.0.3</version>
  <name>RigerJ</name>
  <url>http://www.broadinstitute.org/genetic-perturbation-platform</url>

  <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>

  <dependencies>
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.4</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>[4.13.1,)</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.0</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.1.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
              <transformers>
                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                  <mainClass>org.broadinstitute.gpp.rigerj.RigerJMain</mainClass>
                </transformer>
              </transformers>
              <shadedArtifactAttached>true</shadedArtifactAttached>
              <shadedClassifierName>assembly</shadedClassifierName> <!-- Any name that makes sense -->
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <!-- The "distributionManagement" section immediately below arranges for rigerj to be published
       to GitHub Packages. In order for this to work, however, you need a "~/.m2/settings.xml" file
       that has your GitHub username and your GitHub token in it. These are required for
       authentication purposes. There's official documentation for this located here:

       https://docs.github.com/en/packages/guides/configuring-apache-maven-for-use-with-github-packages

       The above documentation page includes an entire sample "settings.xml" file in the
       documentation. Search for "settings.xml" in the page.

       Just in case this page goes stale, we're including a file in this repo called
       "sample-settings.xml". Unless you have other settings that you need to merge in, you should
       be able to use this file sample file as is. Just copy it to "~/.m2/settings.xml" and then
       replace "USERNAME" with your GitHub username and "TOKEN" with your GitHub token.

       Note that you only need to worry about this if you need to publish new rigerj artifacts.
  -->

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub broadinstitute Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/broadinstitute/rigerj</url>
    </repository>
  </distributionManagement>  



</project>
